removed static version